Created most of the UI

--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
 </head>
 
 <body>
+    <div class="calculator">
+        <input type="number">
+        <div class="calculator-buttons">
 
-    <script src="script.js"></script>
+            <button class="calc-button" id="cancel">C</button>
+            <button class="calc-button" id="divide">&divide;</button>
+
+            <button class="calc-button" id="7">7</button>
+            <button class="calc-button" id="8">8</button>
+            <button class="calc-button" id="9">9</button>
+            <button class="calc-button" id="times">&times;</button>
+
+            <button class="calc-button" id="4">4</button>
+            <button class="calc-button" id="5">5</button>
+            <button class="calc-button" id="6">6</button>
+            <button class="calc-button" id="minus">&minus;</button>
+
+            <button class="calc-button" id="1">1</button>
+            <button class="calc-button" id="2">2</button>
+            <button class="calc-button" id="3">3</button>
+            <button class="calc-button" id="plus">&plus;</button>
+
+            <button class="calc-button" id="zero">0</button>
+            <button class="calc-button" id="decimal">.</button>
+            <button class="calc-button" id="equals">&equals;</button>
+        </div>
+    </div>
 </body>
 
 </html>
